# Acadia-AI-E26

./: .env.template  .gitattributes  .gitignore  LICENSE  README.md  cluster.py  direction.py  flake.nix  pubspec.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
models/license_plate/: license-plate.pt
models/vehicle_direction/: last.pt
spypoint-scraper/: scraper.py
src/db/: __init__.py  models.py
src/detection/: bike_rider_merging.py  classes.py  cluster.py  entity_iou_tracking.py  image_yolo.py  pose_direction.py  video_yolo.py  yolo.py
src/processing/: benchmark_vric.py  entityprofiling.py  image_entityprofiler.py  image_occupancyprofiler.py  plate_dwellprofiler.py  report_recalibrator.py  train_vric.py  train_vric_self_contained.py  video_entityprofiler.py  video_plateextractor.py
src/spypoint-scraper/: scraper.py
src/training/: labeler.py
src/ui/: analyze_dialog.py  bike_rider_merging_dialog.py  calibrate_speed_dialog.py  cluster_dialog.py  entity_tab.py  export_dialog.py  image_tab.py  iou_tracking_dialog.py  main.py  pose_direction_dialog.py
src/utility/: direction_benchmark_common.py  dump.py  face_overlay.py  fetch_vehicle_pose_weights.py  geometryutils.py  htmlreport.py  imgutils.py  loggingutils.py  parallel.py  pedestrian_direction_benchmark.py  plate_dwell_benchmark.py  plate_ground_truth_labeler.py  plate_ocr_benchmark.py  report_summarizer.py  scraper.py  speed_distribution_comparator.py  vehicle_direction_benchmark.py  (+2 more)
test/: widget_test.dart
tests/: conftest.py  test_db_init.py  test_db_models.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+51 files in other folders)
