[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acadia-ai-e26"
version = "0.1.0"
description = "Acadia AI E26 project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.0.0",
    "tqdm>=4.66.0",
    "torch>=2.12.1",
]
